Feature nav added

--- a/index.html
+++ b/index.html
@@ -27,13 +27,21 @@
         <div id="current_color">
         	<div id="color_bg_static" class="color_bg"></div>
         	<div id="color_bg_slider" class="color_bg"></div>
-
-	        <div class="output-container">
-	            <footer class="wrapper clearfix">
-	                <h1 id="output">Loading ...</h1>
-	            </footer>
-	        </div>
         </div>
+
+        <section class="nav-container">
+            <nav id="nav" class="wrapper clearfix">
+                <a href="#" id="toggle_current_color" class="toggle_feature">Change colors using HSL.</a>
+                <a href="#" id="toggle_color_bg_slider" class="toggle_feature">Slide around with swipe.</a>
+                <a href="#" id="toggle_current_hue" class="toggle_feature">Change Philips Hue Colors.</a>
+            </nav>
+        </section>
+
+        <section class="output-container">
+            <div class="wrapper clearfix">
+                <h1 id="output">Loading ...</h1>
+            </div>
+        </section>
         
         <script src="js/main-ck.js"></script>
 
