Split out HSL so you can turn them on or off

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
         <section class="nav-container">
             <nav id="nav" class="wrapper clearfix">
-                <a href="#" id="toggle_current_color" class="toggle_feature">Change colors using HSL.</a>
+                <a href="#" id="toggle_current_color" class="toggle_feature">Change colors using <span id="toggle_current_color_H" class="toggle_feature_sub">H</span><span id="toggle_current_color_S" class="toggle_feature_sub">S</span><span id="toggle_current_color_L" class="toggle_feature_sub">L</span>.</a>
                 <a href="#" id="toggle_color_bg_slider" class="toggle_feature">Slide around with swipe.</a>
-                <a href="#" id="toggle_current_hue" class="toggle_feature">Change Philips Hue Colors.</a>
+                <a href="#" id="toggle_current_hue" class="toggle_feature">Change Philips Hue colors.</a>
             </nav>
         </section>
 
